--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.1.5",
+    "nookies": "^2.5.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "typescript": "^4.6.3"
   }
 }
